# learn_wgpu_cpp_to_rust

./: Cargo.toml  LICENSE  README.md
src/: application.rs  compute.rs  compute.wgsl  gui.rs  main.rs  mipmap_generation.wgsl  resources.rs  shader.wgsl  sobel.wgsl
src/application/: bind_group.rs  buffer.rs  render_pipeline.rs  texture.rs  wgpu_context.rs
