[package]
name = "wgpu-cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
futures-channel = "0.3.30"
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.3"
winit = "0.29.15"
